# SDL_CMake

./: .gitignore  CMakeLists.txt  ReadMe.md  combine_images_horizontally.py  combine_images_vertically.py
SDL_Cmake/: Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
SDL_Cmake/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
SDL_Cmake/assets/: lv1.txt
Sprite/: Sprite-0001.aseprite
