cmake_minimum_required(VERSION 3.10)
project(SDL_App)

# Specify C++ Standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR})

# Find all the source and header files
file(GLOB PROJECT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/*.cpp")
file(GLOB PROJECT_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/*.h")
file(GLOB ECS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/ECS/*.h")
file(GLOB ECS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/ECS/*.cpp")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${ECS_HEADERS} ${ECS_SOURCES})
target_link_libraries(${PROJECT_NAME} SDL2::SDL2 SDL2_image::SDL2_image)
#[[
add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${ECS_HEADERS} ${ECS_SOURCES})
target_link_libraries(${PROJECT_NAME} SDL2::SDL2 SDL2_image::SDL2_image)


#install(TARGETS ${PROJECT_NAME} DESTINATION bin)
#install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/assets/ DESTINATION assets)

# set_target_properties(${PROJECT_NAME} PROPERTIES
#     MACOSX_BUNDLE_GUI_IDENTIFIER your.domain.app.identifier
#     MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
#     MACOSX_BUNDLE_BUNDLE_VERSION "1.0.0"
#     MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0.0"
#     MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist
# )

# Install the application's executable into the app bundle
install(TARGETS ${PROJECT_NAME}
    BUNDLE DESTINATION . COMPONENT Runtime
    RUNTIME DESTINATION ${PROJECT_NAME}.app/Contents/MacOS COMPONENT Runtime
)

# Install resources like assets
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/assets/
    DESTINATION ${PROJECT_NAME}.app/Contents/Resources/assets COMPONENT Runtime
)

IF(APPLE)
  SET(MACOSX_BUNDLE_ICON_FILE QtTest.icns)
  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/QtTest.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
  SET(QTTEST_SRCS ${QTTEST_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/QtTest.icns)
ENDIF(APPLE)


#]]

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#set_target_properties( ${PROJECT_NAME} PROPERTIES
#    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
#    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
#)

# Copy assets directory to build directory
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/SDL_Cmake/assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
